src/objects/BGA_PO_Tracker__c/BGA_PO_Tracker__c.object-meta.xml
<CustomObject>
    <label>PO Tracker</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>