src/objects/BGA_PO_Tracker__c/fields/Aircraft_not_in_service__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_not_in_service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aircraft not in service</description>
    <label>Aircraft not in service?</label>
    <type>Checkbox</type>
</CustomField>