src/objects/BGA_PO_Tracker__c/fields/Charts_Platform_Family__c.field-meta.xml
<CustomField>
    <fullName>Charts_Platform_Family__c</fullName>
    <description>Charts Platform Family, this field is used for charts and to group platforms.</description>
    <label>Platform Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Challenger 601-3A/R</fullName>
            </value>
            <value>
                <fullName>Falcon 2000</fullName>
            </value>
            <value>
                <fullName>Falcon 7X</fullName>
            </value>
            <value>
                <fullName>Falcon 8X</fullName>
            </value>
            <value>
                <fullName>Falcon 900/900B</fullName>
            </value>
            <value>
                <fullName>Falcon 900 C/EX</fullName>
            </value>
            <value>
                <fullName>Falcon 900X</fullName>
            </value>
            <value>
                <fullName>Falcon 9X</fullName>
            </value>
            <value>
                <fullName>G550/G450/G350</fullName>
            </value>
            <value>
                <fullName>Global Express</fullName>
            </value>
            <value>
                <fullName>Gulfstream 650</fullName>
            </value>
            <value>
                <fullName>Gulfstream IV/V</fullName>
            </value>
            <value>
                <fullName>Hawker 800/1000</fullName>
            </value>
            <value>
                <fullName>Legacy 600</fullName>
            </value>
            <value>
                <fullName>Legacy 650</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>