src/objects/BGA_PO_Tracker__c/fields/Date_APM_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Date_APM_Shipped__c</fullName>
    <description>APM Shipment Date, this field and content is moved to option level</description>
    <label>APM Shipment Date ( obsolute )</label>
    <type>Date</type>
</CustomField>