src/objects/BGA_PO_Tracker__c/fields/Has_Baseline_or_Basic__c.field-meta.xml
<CustomField>
    <fullName>Has_Baseline_or_Basic__c</fullName>
    <description>If count is &gt; 0 then aircraft has EasyII Baseline or Cert Basic</description>
    <label>With Baseline or Basic</label>
    <summaryFilterItems>
        <field>BGA_PO_Tracker_Entry__c.RMU_Config_Detail_Name__c</field>
        <operation>equals</operation>
        <value>Baseline Only, Baseline, Basic</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>BGA_PO_Tracker_Entry__c.Sales_Price__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>BGA_PO_Tracker_Entry__c.BGA_Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>