src/objects/BGA_PO_Tracker__c/fields/Number_of_options__c.field-meta.xml
<CustomField>
    <fullName>Number_of_options__c</fullName>
    <label>Number of Entries</label>
    <summaryForeignKey>BGA_PO_Tracker_Entry__c.BGA_Purchase_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>