src/objects/BGA_PO_Tracker__c/fields/SN__c.field-meta.xml
<CustomField>
    <fullName>SN__c</fullName>
    <label>Serial#</label>
    <length>40</length>
    <type>Text</type>
</CustomField>