src/objects/BGA_PO_Tracker__c/fields/SPEX_KB_600_Need_Date__c.field-meta.xml
<CustomField>
    <fullName>SPEX_KB_600_Need_Date__c</fullName>
    <label>SPEX KB-600 Need Date</label>
    <type>Date</type>
</CustomField>