src/objects/BGA_PO_Tracker__c/recordTypes/Default_PO_Tracker.recordType-meta.xml
<RecordType>
    <fullName>Default_PO_Tracker</fullName>
    <active>true</active>
    <description>Default PO Tracker ( for non Easy2 record)</description>
    <label>Default PO Tracker</label>
</RecordType>