src/objects/BGA_PO_Tracker__c/recordTypes/Easy2_Tracker.recordType-meta.xml
<RecordType>
    <fullName>Easy2_Tracker</fullName>
    <active>true</active>
    <description>Easy2 Tracking</description>
    <label>Easy2 Tracking</label>
</RecordType>