src/objects/BGA_PO_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SN__c</columns>
    <columns>Aircraft_not_in_service__c</columns>
    <columns>Total_RMU_Value__c</columns>
    <columns>Company__c</columns>
    <columns>Account__c</columns>
    <columns>Fleet_Asset_Aircraft__c</columns>
    <columns>Status__c</columns>
    <columns>ASM__c</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Input_Date__c</columns>
    <columns>Retrofit_or_Completion__c</columns>
    <columns>Number_of_options__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>