src/objects/BGA_PO_Tracker__c/listViews/Falcon_2000EX_EASy.listView-meta.xml
<ListView>
    <fullName>Falcon_2000EX_EASy</fullName>
    <columns>NAME</columns>
    <columns>SN__c</columns>
    <columns>Aircraft_not_in_service__c</columns>
    <columns>Total_RMU_Value__c</columns>
    <columns>Company__c</columns>
    <columns>Account__c</columns>
    <columns>Fleet_Asset_Aircraft__c</columns>
    <columns>Status__c</columns>
    <columns>ASM__c</columns>
    <columns>Country__c</columns>
    <columns>Region__c</columns>
    <columns>Input_Date__c</columns>
    <columns>Retrofit_or_Completion__c</columns>
    <columns>Number_of_options__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Charts_Platform_Family__c</field>
        <operation>contains</operation>
        <value>Falcon 2000</value>
    </filters>
    <label>Falcon 2000EX EASy</label>
</ListView>